# Linkedin-Assistant

./: .env  .env.example  .gitattributes  .gitignore  Procfile  README.md  followup.db  migrate_db.py  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  tailwind.config.ts  test_extension.html
data/: seed_contacts.json
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
followup_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prisma/: schema.prisma  seed.ts
prisma/migrations/20250914181545_init/: migration.sql
reports/: contacts_20250815_205353.csv  contacts_20250815_205610.md
src/: analytics.py  api.py  app.py  db.py  dedupe.py  follow_up.py  generator.py  models.py  normalizer.py  utils.py  web.py  web_modern.py  web_new.py
src/app/: layout.tsx  page.tsx
src/app/add/: page.tsx
src/app/api/generate/: route.ts
src/app/api/records/: route.ts
src/app/api/records/[id]/: route.ts
src/app/record/[id]/: page.tsx
src/components/ui/: card.tsx  char-counter.tsx  copy-button.tsx  status-pill.tsx  tag-input.tsx
src/lib/: llm.ts  utils.ts  validations.ts
src/reports/: export.py
src/styles/: globals.css
src/templates/: followups.yaml
templates/: index.html
tests/: test_cli.py  test_dedupe.py  test_templates.py
